--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
+@font-face {
+  font-family: Centra;
+  src: url(./assests/font/CentraNo2-Bold.ttf);
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: Centra;
+  src: url(./assests/font/CentraNo2-Book.ttf);
+  font-weight: 700;
+}
+
+
+@font-face {
+  font-family: Centra;
+  src: url(./assests/font/CentraNo2-Medium.ttf);
+  font-weight: 700;
+}
+
+
 .App {
   text-align: center;
 }
