--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,19 @@
 
 @font-face {
   font-family: Centra;
-  src: url(./assests/font/CentraNo2-Bold.ttf);
+  src: url('./assests/font/CentraNo2-Bold.ttf');
   font-weight: 700;
 }
 
 @font-face {
   font-family: Centra;
-  src: url(./assests/font/CentraNo2-Medium.ttf);
+  src: url('./assests/font/CentraNo2-Medium.ttf');
   font-weight: 500;
 }
 
 @font-face {
   font-family: Centra;
-  src: url(./assests/font/CentraNo2-Book.ttf);
+  src: url('./assests/font/CentraNo2-Book.ttf');
   font-weight: 400;
 }
 
@@ -47,8 +47,37 @@ h1,h2,h3,h4,h5,h6{
   line-height: normal;
 
 }
+p, a, li, button, ul {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+  text-decoration: none;
+}
 
+a:hover {
+  text-decoration: none;
+}
 
+img {
+  width: 100%;
+  height: auto;
+}
+
+button {
+  border: 0;
+  background-color: transparent;
+}
+
+input:focus, textarea:focus, select:focus {
+  outline: none;
+}
+
+@media (min-width:1700px) {
+	main .container {
+		max-width: 100%;
+		padding: 0 150px;
+	}
+}
 
 p.success{
   color: green;
